--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,14 +17,16 @@ set $mod Mod4
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 10
 
 # gaps
 gaps inner 5
-gaps outer 8
+gaps outer 10
+smart_gaps on
 
 # polybar
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec_always --no-startup-id polybar top
 
 # hide indicator
 hide_edge_borders both
@@ -32,6 +34,9 @@ hide_edge_borders both
 # hide window title edit border thickness
 for_window [class="^.*"] border pixel 0
 new_window 1pixel
+
+# attempt for wifi 
+exec --no-startup-id nm-applet
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -50,11 +55,11 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+j focus left
@@ -165,12 +170,12 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status | ~/tools/i3-weather/weather.py --wrap-i3-status 12836182 --unit c --format {city},{region}:{text},{temp}°{unit_temperature},Sun:{sunrise}-{sunset}
-        tray_output primary
-}
+#bar {
+ #       status_command i3status | ~/tools/i3-weather/weather.py --wrap-i3-status 12836182 --unit c --format {city},{region}:{text},{temp}°{unit_temperature},Sun:{sunrise}-{sunset}
+  #      tray_output primary
+#}
 exec --no-startup-id feh --bg-scale ~/Bilder/wallpaper.png
-exec --no-startup-id kde5-nm-connection-editor
+# exec --no-startup-id kde5-nm-connection-editor
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
@@ -182,8 +187,7 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightne
 
 # lockin screen
 bindsym $mod+Shift+f exec i3lock -d -i ~/Bilder/wallpaper.png
-exec --no-startup-id xautolock -time 10 -locker 'i3lock -d -i ~/Bilder/wallpaper.png
-
+exec --no-startup-id xautolock -time 10 -locker 'i3lock -d -i ~/Bilder/wallpaper.png'
 exec gnome-settings-daemon
 # switch workspaces between screens
 bindsym $mod+p move workspace to output right
