updated with betterlockscreen

--- a/.config/albert/albert.conf
+++ b/.config/albert/albert.conf
@@ -1,5 +1,5 @@
 [General]
-hotkey=Meta+\xdc
+hotkey=Meta+D
 showTray=true
 standsalone_note_shown=true
 terminal=konsole -e
@@ -9,8 +9,8 @@ enabled=true
 fuzzy=false
 
 [org.albert.extension.chromebookmarks]
-enabled=true
-fuzzy=false
+enabled=false
+fuzzy=true
 
 [org.albert.extension.externalextensions]
 enabled=false
@@ -29,6 +29,7 @@ enabled=true
 
 [org.albert.extension.system]
 enabled=true
+shutdown=shutdown now
 
 [org.albert.extension.terminal]
 enabled=true
