--- a/.config/albert/albert.conf
+++ b/.config/albert/albert.conf
@@ -29,6 +29,7 @@ enabled=true
 
 [org.albert.extension.system]
 enabled=true
+reboot=reboot
 shutdown=shutdown now
 
 [org.albert.extension.terminal]
@@ -45,6 +46,6 @@ displayScrollbar=false
 displayShadow=true
 hideOnClose=false
 hideOnFocusLoss=true
-itemCount=5
+itemCount=7
 showCentered=true
 theme=Bright
